# wing

./: Cargo.toml  README.md  license.mark
developer/: project.build
lighting_architecture/: Cargo.toml
lighting_architecture/src/memory/: mod.rs
lighting_architecture/src/memory/data_latchs/: mod.rs  set_reset_latch.rs
main/: Cargo.toml
main/src/: main.rs
memory/: Cargo.toml
memory/src/: debug.rs  ff.rs  lib.rs
memory/src/latch/: mod.rs  sr_latch.rs
src/: main.rs
src/common/: mod.rs  trigger_driver.rs
src/emulator/: memory.rs  mod.rs  random_access_memory.rs  register.rs  signal.rs
src/machine/: mod.rs
src/memory/: file.rs  mod.rs  register.rs
src/wing/: main.rs  prepare.rs
src/wire/: config.rs  initial_loader.rs  main.rs  mod.rs  prepare.rs
wix/: main.wxs
